gitops/apps/kafka-ui/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  labels:
    app: kafka-ui
spec:
  selector:
    app: kafka-ui
  ports:
    - {name: http, port: 80, targetPort: http}
